# NebulaInject

./: .clang-format  CMakeCache.txt  CMakeLists.txt  Makefile  Phantom_Injector  PlayerControllerMP_methods.txt  README.md  build.sh  cmake_install.cmake  test_dlopen  test_dlopen.c
.cache/clangd/index/: AbstractClass.cpp.6B7B24138992FF9C.idx  AbstractClass.h.EA5F32AB33AA2839.idx  AimAssist.cpp.5A5297DE27EA638F.idx  AimAssist.h.EB9FF4F91688D69B.idx  AimBot.cpp.158DFFA3F896D55F.idx  AimBot.h.59C0097E9A530E0F.idx  AutoClicker.cpp.5493D3D6C0296B0A.idx  AutoClicker.h.91806A2D1BC4CBBF.idx  AutoSprint.h.04D42DA7636F5031.idx  AxisAlignedBB.cpp.6BD4E4BFDF289B78.idx  AxisAlignedBB.h.7886CA1072B7283A.idx  CM.h.DF4BA5C52C11BF9B.idx  Cheat.cpp.6228E74DE722843E.idx  Cheat.h.8F1D6EB921A5BD96.idx  Clip.cpp.26D3413CB969C0EB.idx  Clip.h.EAB0181CD942204A.idx  ESP.h.2837CAC14CFCF8EA.idx  Entity.cpp.1250730491A047DC.idx  Entity.h.EA10080793BBFBF6.idx  EntityLivingBase.cpp.0A4EFD88BEDD7ACB.idx  EntityLivingBase.h.B6E474FDE806BDDF.idx  EntityPlayer.cpp.3FE8B5012DF3CBF2.idx  EntityPlayer.h.371B42F258BF6CAB.idx  EntityPlayerSP.cpp.19574D80E6F1A8D4.idx  EntityPlayerSP.h.B620CB36D3F9888F.idx  EntityRenderer.cpp.77AC140C6ACE0417.idx  EntityRenderer.h.418F81E0897FC4AA.idx  FastPlace.cpp.E9C7202CB5B86C21.idx  FastPlace.h.AAB5680BB9AB1D79.idx  Fastplace.cpp.8272AF6DE3438B0C.idx  Fastplace.h.1F72546BD9252FF8.idx  GameSettings.cpp.D8929DC1F4BE1A64.idx  GameSettings.h.6BA43962D83688D8.idx  HitBox.cpp.1D426AD3DB3519C4.idx  HitBox.h.16BB4BE77DE276C5.idx  HitDelayFix.cpp.AF9C911D47D0EC78.idx  HitDelayFix.h.6CA525BBD08A8432.idx  ImGuiUtils.cpp.24C95C801A40CE5C.idx  ImGuiUtils.h.F24B7CE3E4BE5324.idx  JavaList.cpp.C6F0D8098D001575.idx  (+79 more)
injector-cli/: main.cpp
src/: Phantom.cpp  Phantom.h  library.cpp
src/cheats/: AutoClicker.cpp  AutoClicker.h  AutoSprint.cpp  AutoSprint.h  Cheat.cpp  Cheat.h  Clip.h  ESP.cpp  ESP.h  FastPlace.cpp  FastPlace.h  NoHitDelay.cpp  NoHitDelay.h  Reach.cpp  Reach.h  ReachInput.cpp  ReachInput.h  TestPlayerModule.cpp  TestPlayerModule.h  Velocity.cpp  Velocity.h
src/mapping/: AbstractClass.cpp  AbstractClass.h  Mapping.cpp  Mapping.h
src/mapping/impl/net/minecraft/client/: Minecraft.cpp  Minecraft.h
src/mapping/impl/net/minecraft/entity/: Entity.cpp  Entity.h  EntityPlayerSP.cpp  EntityPlayerSP.h
src/mapping/impl/net/minecraft/util/: AxisAlignedBB.cpp  AxisAlignedBB.h  MovingObjectPosition.cpp  MovingObjectPosition.h  Vec3.cpp  Vec3.h
src/ui/: KeyManager.cpp  KeyManager.h  NebulaFontLoader.h  PhantomWindow.cpp  PhantomWindow.h
src/utils/: ImGuiUtils.cpp  ImGuiUtils.h  MCUtils.cpp  XUtils.cpp
